# drt

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ja.md  GOVERNANCE.md  OPEN_CORE.md  README.ja.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: telemetry.md
docs/llm/: CONTEXT.md
drt/: telemetry.py
drt/cli/: main.py  output.py
drt/destinations/: clickhouse.py  mysql.py  postgres.py  snowflake.py  twilio.py
drt/engine/: sync.py
drt/integrations/: cosmos.py  dbt.py
skills/drt/.claude-plugin/: plugin.json
tests/unit/: test_cli_config.py  test_cli_run_telemetry.py  test_cli_validate_connection.py  test_clickhouse_destination.py  test_cosmos_integration.py  test_engine.py  test_mysql_destination.py  test_postgres_destination.py  test_snowflake_destination.py  test_telemetry.py
